[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/WorldMap/LevelNode/LevelNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/WorldMap/WorldMapMovingElement/Character/WorldMapCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WorldMap/Bind/LevelNodeBind.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/WorldMap/WorldMap.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Actor/Players/MrStonks/Sprites/RoboHammer.png" type="Texture" id=6]
[ext_resource path="res://Scenes/WorldMap/WorldMapMovingElement/Cursor/WorldMapCursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/WorldMap/WorldMapCharacterContainer.gd" type="Script" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 54.5021, 253.45, 0, 0, 0, 0, 54.5021, 154.342, 0, 0, 0, 0, 280.005, 154.342 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 54.5021, 291.45, 0, 0, 0, 0, 54.5021, 475.212, 0, 0, 0, 0, 319.305, 475.212 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 299.005, 173.342, 0, 0, 0, 0, 299.005, 231.156, 0, 0, 0, 0, 520.802, 231.156 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 357.305, 475.212, 0, 0, 0, 0, 539.802, 475.212, 0, 0, 0, 0, 539.802, 250.156 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 558.802, 231.156, 0, 0, 0, 0, 645.227, 231.156, 0, 0, 0, 0, 645.227, 420.518 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 664.227, 439.518, 0, 0, 0, 0, 767.749, 439.518, 0, 0, 0, 0, 767.749, 232.298 )
}

[node name="WorldMap" type="CanvasLayer"]
script = ExtResource( 5 )
cursor_start_level_path = "Levels/LevelNode"

[node name="Levels" type="Node2D" parent="."]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LevelNode" parent="Levels" instance=ExtResource( 1 )]
self_modulate = Color( 0.66, 0.66, 0.66, 1 )
position = Vector2( 54.5021, 272.45 )
level_scene_path = "res://Scenes/Levels/Chapter1/Level1/Level1A.tscn"
visited = true

[node name="LevelNode2" parent="Levels" instance=ExtResource( 1 )]
position = Vector2( 338.305, 475.212 )
level_scene_path = "res://Scenes/Levels/Chapter1/Level1/Level1B.tscn"

[node name="LevelNode3" parent="Levels" instance=ExtResource( 1 )]
position = Vector2( 299.005, 154.342 )
level_scene_path = "res://Scenes/Levels/Chapter1/Level1/Level1C.tscn"

[node name="LevelNode4" parent="Levels" instance=ExtResource( 1 )]
position = Vector2( 645.227, 439.518 )

[node name="LevelNode5" parent="Levels" instance=ExtResource( 1 )]
position = Vector2( 539.802, 231.156 )

[node name="LevelNode6" parent="Levels" instance=ExtResource( 1 )]
position = Vector2( 767.749, 213.298 )

[node name="Binds" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="LevelNodeBind" parent="Binds" instance=ExtResource( 4 )]
curve = SubResource( 1 )
origin_node_path = "Levels/LevelNode"
destination_node_path = "Levels/LevelNode3"

[node name="LevelNodeBind2" parent="Binds" instance=ExtResource( 4 )]
curve = SubResource( 2 )
origin_node_path = "Levels/LevelNode"
destination_node_path = "Levels/LevelNode2"

[node name="LevelNodeBind3" parent="Binds" instance=ExtResource( 4 )]
curve = SubResource( 3 )
origin_node_path = "Levels/LevelNode3"
destination_node_path = "Levels/LevelNode5"

[node name="LevelNodeBind4" parent="Binds" instance=ExtResource( 4 )]
curve = SubResource( 4 )
origin_node_path = "Levels/LevelNode2"
destination_node_path = "Levels/LevelNode5"

[node name="LevelNodeBind5" parent="Binds" instance=ExtResource( 4 )]
curve = SubResource( 5 )
origin_node_path = "Levels/LevelNode5"
destination_node_path = "Levels/LevelNode4"

[node name="LevelNodeBind6" parent="Binds" instance=ExtResource( 4 )]
curve = SubResource( 6 )
origin_node_path = "Levels/LevelNode4"
destination_node_path = "Levels/LevelNode6"

[node name="Tween" type="Tween" parent="."]

[node name="Characters" type="Node2D" parent="."]
position = Vector2( 54.5021, 272.45 )
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="WorldMapCharacter" parent="Characters" instance=ExtResource( 2 )]
position = Vector2( -15, -40 )

[node name="WorldMapCharacter2" parent="Characters" instance=ExtResource( 2 )]
position = Vector2( 15, -40 )
texture = ExtResource( 6 )
offset = Vector2( 0, -8 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Tween" type="Tween" parent="Characters"]

[node name="WorldMapCursor" parent="." instance=ExtResource( 8 )]
position = Vector2( 54.5021, 272.45 )
